--- a/linear norm plot.Rmd
+++ b/linear norm plot.Rmd
@@ -262,6 +262,76 @@ axis(1, at=1:5, labels=x_axis)
 legend(par('usr')[2], par('usr')[4], bty='n', xpd=NA
        ,c("DGP", "DJ","QR","PM"), pch=1:4,col=1:4)
 ```
+```{r fr}
+x_axis<-c(40,120,480,1200,4800)
+y_40<-c(Reduce("+",re_40_p_l[[1]])[4]/iter,Reduce("+",re_40_p_l[[2]])[4]/iter
+        ,Reduce("+",re_40_p_l[[3]])[4]/iter,Reduce("+",re_40_p_l[[4]])[4]/iter)
+y_120<-c(Reduce("+",re_120_p_l[[1]])[4]/iter,Reduce("+",re_120_p_l[[2]])[4]/iter
+         ,Reduce("+",re_120_p_l[[3]])[4]/iter,Reduce("+",re_120_p_l[[4]])[4]/iter)
+y_480<-c(Reduce("+",re_480_p_l[[1]])[4]/iter,Reduce("+",re_480_p_l[[2]])[4]/iter
+         ,Reduce("+",re_480_p_l[[3]])[4]/iter,Reduce("+",re_480_p_l[[4]])[4]/iter)
+y_1200<-c(Reduce("+",re_1200_p_l[[1]])[4]/iter,Reduce("+",re_1200_p_l[[2]])[4]/iter
+          ,Reduce("+",re_1200_p_l[[3]])[4]/iter,Reduce("+",re_1200_p_l[[4]])[4]/iter)
+y_4800<-c(Reduce("+",re_4800_p_l[[1]])[4]/iter,Reduce("+",re_4800_p_l[[2]])[4]/iter
+          ,Reduce("+",re_4800_p_l[[3]])[4]/iter,Reduce("+",re_4800_p_l[[4]])[4]/iter)
+y_axis<-c(y_40,y_120,y_480,y_1200,y_4800)
+mac<-matrix(y_axis,nrow = 4,ncol = 5)
+mac<-t(mac)
+rownames(mac)<-c('40','120','480','1200','4800')
+colnames(mac)<-c("DGP", "DJ","QR","CF")
+par(omd=c(0, 1-w, 0, 1))
+matplot(mac, type = c("b"),pch=1:4,col = 1:4,xaxt = "n",xlab = 'data length'
+        ,ylab = 'fill rate')
+axis(1, at=1:5, labels=x_axis)
+legend(par('usr')[2], par('usr')[4], bty='n', xpd=NA
+       ,c("DGP", "DJ","QR","PM"), pch=1:4,col=1:4)
+
+y_40<-c(Reduce("+",re_40_p_l[[5]])[4]/iter,Reduce("+",re_40_p_l[[6]])[4]/iter
+        ,Reduce("+",re_40_p_l[[7]])[4]/iter,Reduce("+",re_40_p_l[[8]])[4]/iter)
+y_120<-c(Reduce("+",re_120_p_l[[5]])[4]/iter,Reduce("+",re_120_p_l[[6]])[4]/iter
+         ,Reduce("+",re_120_p_l[[7]])[4]/iter,Reduce("+",re_120_p_l[[8]])[4]/iter)
+y_480<-c(Reduce("+",re_480_p_l[[5]])[4]/iter,Reduce("+",re_480_p_l[[6]])[4]/iter
+         ,Reduce("+",re_480_p_l[[7]])[4]/iter,Reduce("+",re_480_p_l[[8]])[4]/iter)
+y_1200<-c(Reduce("+",re_1200_p_l[[5]])[4]/iter,Reduce("+",re_1200_p_l[[6]])[4]/iter
+          ,Reduce("+",re_1200_p_l[[7]])[4]/iter,Reduce("+",re_1200_p_l[[8]])[4]/iter)
+y_4800<-c(Reduce("+",re_4800_p_l[[5]])[4]/iter,Reduce("+",re_4800_p_l[[6]])[4]/iter
+          ,Reduce("+",re_4800_p_l[[7]])[4]/iter,Reduce("+",re_4800_p_l[[8]])[4]/iter)
+y_axis<-c(y_40,y_120,y_480,y_1200,y_4800)
+mac<-matrix(y_axis,nrow = 4,ncol = 5)
+mac<-t(mac)
+rownames(mac)<-c('40','120','480','1200','4800')
+colnames(mac)<-c("DGP", "DJ","QR","CF")
+par(omd=c(0, 1-w, 0, 1))
+matplot(mac, type = c("b"),pch=1:4,col = 1:4,xaxt = "n",xlab = 'data length'
+        ,ylab = 'fill rate')
+axis(1, at=1:5, labels=x_axis)
+legend(par('usr')[2], par('usr')[4], bty='n', xpd=NA
+       ,c("DGP", "DJ","QR","PM"), pch=1:4,col=1:4)
+
+y_40<-c(Reduce("+",re_40_p_l[[9]])[4]/iter,Reduce("+",re_40_p_l[[10]])[4]/iter
+        ,Reduce("+",re_40_p_l[[11]])[4]/iter,Reduce("+",re_40_p_l[[12]])[4]/iter)
+y_120<-c(Reduce("+",re_120_p_l[[9]])[4]/iter,Reduce("+",re_120_p_l[[10]])[4]/iter
+         ,Reduce("+",re_120_p_l[[11]])[4]/iter,Reduce("+",re_120_p_l[[12]])[4]/iter)
+y_480<-c(Reduce("+",re_480_p_l[[9]])[4]/iter,Reduce("+",re_480_p_l[[10]])[4]/iter
+         ,Reduce("+",re_480_p_l[[11]])[4]/iter,Reduce("+",re_480_p_l[[12]])[4]/iter)
+y_1200<-c(Reduce("+",re_1200_p_l[[9]])[4]/iter,Reduce("+",re_1200_p_l[[10]])[4]/iter
+          ,Reduce("+",re_1200_p_l[[11]])[4]/iter,Reduce("+",re_1200_p_l[[12]])[4]/iter)
+y_4800<-c(Reduce("+",re_4800_p_l[[9]])[4]/iter,Reduce("+",re_4800_p_l[[10]])[4]/iter
+          ,Reduce("+",re_4800_p_l[[11]])[4]/iter,Reduce("+",re_4800_p_l[[12]])[4]/iter)
+y_axis<-c(y_40,y_120,y_480,y_1200,y_4800)
+mac<-matrix(y_axis,nrow = 4,ncol = 5)
+mac<-t(mac)
+rownames(mac)<-c('40','120','480','1200','4800')
+colnames(mac)<-c("DGP", "DJ","QR","CF")
+par(omd=c(0, 1-w, 0, 1))
+matplot(mac, type = c("b"),pch=1:4,col = 1:4,xaxt = "n",xlab = 'data length'
+        ,ylab = 'fill rate')
+abline(h=0.3,lty=2,col='black')
+axis(1, at=1:5, labels=x_axis)
+legend(par('usr')[2], par('usr')[4], bty='n', xpd=NA
+       ,c("DGP", "DJ","QR","PM"), pch=1:4,col=1:4)
+```
+
 
 ```{r Wilcoxon}
 dgp_w<-c(wilcox.test(sapply(re_1200_p_l[[1]], "[[", 3),sapply(re_4800_p_l[[1]], "[[", 3))$p.value
@@ -283,59 +353,6 @@ kable(df,'latex', booktabs = T,caption = 'p-value of Wilcoxon Test between data 
         kable_styling(latex_options = c("striped"))
 ```
 
-
-```{r fr}
-y_40<-c(Reduce("+",re_40_p_l[[1]])[4]/iter,Reduce("+",re_40_p_l[[2]])[4]/iter
-        ,Reduce("+",re_40_p_l[[3]])[4]/iter,Reduce("+",re_40_p_l[[4]])[4]/iter)
-y_120<-c(Reduce("+",re_120_p_l[[1]])[4]/iter,Reduce("+",re_120_p_l[[2]])[4]/iter
-         ,Reduce("+",re_120_p_l[[3]])[4]/iter,Reduce("+",re_120_p_l[[4]])[4]/iter)
-y_480<-c(Reduce("+",re_480_p_l[[1]])[4]/iter,Reduce("+",re_480_p_l[[2]])[4]/iter
-         ,Reduce("+",re_480_p_l[[3]])[4]/iter,Reduce("+",re_480_p_l[[4]])[4]/iter)
-y_1200<-c(Reduce("+",re_1200_p_l[[1]])[4]/iter,Reduce("+",re_1200_p_l[[2]])[4]/iter
-          ,Reduce("+",re_1200_p_l[[3]])[4]/iter,Reduce("+",re_1200_p_l[[4]])[4]/iter)
-y_4800<-c(Reduce("+",re_4800_p_l[[1]])[4]/iter,Reduce("+",re_4800_p_l[[2]])[4]/iter
-          ,Reduce("+",re_4800_p_l[[3]])[4]/iter,Reduce("+",re_4800_p_l[[4]])[4]/iter)
-y_axis<-c(y_40,y_120,y_480,y_1200,y_4800)
-mac<-matrix(y_axis,nrow = 4,ncol = 5)
-mac<-t(mac)
-rownames(mac)<-c('40','120','480','1200','4800')
-colnames(mac)<-c("DGP", "DJ","QR","CF")
-mac
-
-y_40<-c(Reduce("+",re_40_p_l[[5]])[4]/iter,Reduce("+",re_40_p_l[[6]])[4]/iter
-        ,Reduce("+",re_40_p_l[[7]])[4]/iter,Reduce("+",re_40_p_l[[8]])[4]/iter)
-y_120<-c(Reduce("+",re_120_p_l[[5]])[4]/iter,Reduce("+",re_120_p_l[[6]])[4]/iter
-         ,Reduce("+",re_120_p_l[[7]])[4]/iter,Reduce("+",re_120_p_l[[8]])[4]/iter)
-y_480<-c(Reduce("+",re_480_p_l[[5]])[4]/iter,Reduce("+",re_480_p_l[[6]])[4]/iter
-         ,Reduce("+",re_480_p_l[[7]])[4]/iter,Reduce("+",re_480_p_l[[8]])[4]/iter)
-y_1200<-c(Reduce("+",re_1200_p_l[[5]])[4]/iter,Reduce("+",re_1200_p_l[[6]])[4]/iter
-          ,Reduce("+",re_1200_p_l[[7]])[4]/iter,Reduce("+",re_1200_p_l[[8]])[4]/iter)
-y_4800<-c(Reduce("+",re_4800_p_l[[5]])[4]/iter,Reduce("+",re_4800_p_l[[6]])[4]/iter
-          ,Reduce("+",re_4800_p_l[[7]])[4]/iter,Reduce("+",re_4800_p_l[[8]])[4]/iter)
-y_axis<-c(y_40,y_120,y_480,y_1200,y_4800)
-mac<-matrix(y_axis,nrow = 4,ncol = 5)
-mac<-t(mac)
-rownames(mac)<-c('40','120','480','1200','4800')
-colnames(mac)<-c("DGP", "DJ","QR","CF")
-mac
-
-y_40<-c(Reduce("+",re_40_p_l[[9]])[4]/iter,Reduce("+",re_40_p_l[[10]])[4]/iter
-        ,Reduce("+",re_40_p_l[[11]])[4]/iter,Reduce("+",re_40_p_l[[12]])[4]/iter)
-y_120<-c(Reduce("+",re_120_p_l[[9]])[4]/iter,Reduce("+",re_120_p_l[[10]])[4]/iter
-         ,Reduce("+",re_120_p_l[[11]])[4]/iter,Reduce("+",re_120_p_l[[12]])[4]/iter)
-y_480<-c(Reduce("+",re_480_p_l[[9]])[4]/iter,Reduce("+",re_480_p_l[[10]])[4]/iter
-         ,Reduce("+",re_480_p_l[[11]])[4]/iter,Reduce("+",re_480_p_l[[12]])[4]/iter)
-y_1200<-c(Reduce("+",re_1200_p_l[[9]])[4]/iter,Reduce("+",re_1200_p_l[[10]])[4]/iter
-          ,Reduce("+",re_1200_p_l[[11]])[4]/iter,Reduce("+",re_1200_p_l[[12]])[4]/iter)
-y_4800<-c(Reduce("+",re_4800_p_l[[9]])[4]/iter,Reduce("+",re_4800_p_l[[10]])[4]/iter
-          ,Reduce("+",re_4800_p_l[[11]])[4]/iter,Reduce("+",re_4800_p_l[[12]])[4]/iter)
-y_axis<-c(y_40,y_120,y_480,y_1200,y_4800)
-mac<-matrix(y_axis,nrow = 4,ncol = 5)
-mac<-t(mac)
-rownames(mac)<-c('40','120','480','1200','4800')
-colnames(mac)<-c("DGP", "DJ","QR","CF")
-mac
-```
 
 
 
