--- a/linear-norm-plot.tex
+++ b/linear-norm-plot.tex
@@ -116,6 +116,9 @@ Data size & DGP & disjoint & quantile & proposed & DGP & disjoint & quantile & p
 \includegraphics{linear-norm-plot_files/figure-latex/sl-1.pdf}
 \includegraphics{linear-norm-plot_files/figure-latex/sl-2.pdf}
 \includegraphics{linear-norm-plot_files/figure-latex/sl-3.pdf}
+\includegraphics{linear-norm-plot_files/figure-latex/fr-1.pdf}
+\includegraphics{linear-norm-plot_files/figure-latex/fr-2.pdf}
+\includegraphics{linear-norm-plot_files/figure-latex/fr-3.pdf}
 
 \begin{table}
 
@@ -131,33 +134,6 @@ Target service level & DGP & disjoint & quantile & proposed\\
 \bottomrule
 \end{tabular}
 \end{table}
-
-\begin{verbatim}
-##            DGP        DJ        QR        CF
-## 40   0.9509822 0.9326736 0.9418560 0.9437461
-## 120  0.9513125 0.9430230 0.9479289 0.9487688
-## 480  0.9521728 0.9494005 0.9510724 0.9512184
-## 1200 0.9529062 0.9510938 0.9523572 0.9523857
-## 4800 0.9522511 0.9518940 0.9518412 0.9518687
-\end{verbatim}
-
-\begin{verbatim}
-##            DGP        DJ        QR        CF
-## 40   0.9745391 0.9581833 0.9594383 0.9619832
-## 120  0.9726712 0.9658907 0.9688581 0.9684646
-## 480  0.9709970 0.9686659 0.9696528 0.9691997
-## 1200 0.9712115 0.9700645 0.9706703 0.9702015
-## 4800 0.9710673 0.9709000 0.9705871 0.9701629
-\end{verbatim}
-
-\begin{verbatim}
-##            DGP        DJ        QR        CF
-## 40   0.8952578 0.8797266 0.8997386 0.9074440
-## 120  0.9055669 0.8965015 0.9062160 0.9095336
-## 480  0.9089606 0.9047315 0.9087081 0.9102422
-## 1200 0.9101748 0.9070673 0.9091198 0.9105759
-## 4800 0.9108143 0.9103921 0.9098343 0.9109945
-\end{verbatim}
 
 \textbackslash begin\{table\}
 
